test/parse/module/bad-import-not-result.txt
;;; ERROR: 1
(module (import "foo" "bar" (param i32) (resalt i32)))
(;; STDERR ;;;
parse/module/bad-import-not-result.txt:2:42: unexpected token "resalt"
parse/module/bad-import-not-result.txt:2:49: syntax error, unexpected VALUE_TYPE, expecting RESULT
;;; STDERR ;;)
